# drlaw-agent

./: .gitignore  1.docx  langgraph.json  pyproject.toml  task.json
drlaw_agent/: __main__.py
drlaw_agent/agents/: addresser.py  answer.py  apier.py  assistanter.py  companyer.py  courter.py  errorer.py  executor.py  indictmenter.py  lawfirmer.py  legaler.py  master.py  prosecuter.py  publisher.py  reporter.py  reviewer.py  toolselect.py  xzgxfer.py
drlaw_agent/agents/toolkits/: __init__.py  address.py  api.py  company.py  court.py  lawfirm.py  legal.py  sub_company_info_tools.py  write.py  xzgxf.py
drlaw_agent/apis/: __init__.py  address_data_query_api.py  base.py  cal_data_query_api.py  company_data_query_api.py  data_query_api.py  law_data_query_api.py  write_data_api.py
drlaw_agent/memory/: drlaw.py  prosecute.py  report.py  research.py
drlaw_agent/services/: __init__.py  address_service.py  api_service.py  base.py  base_service.py  company_info_service.py  company_register_service.py  company_service.py  court_service.py  law_service.py  lawfirm_service.py  legal_service.py  sub_company_info_service.py  write_service.py  xzgxf_service.py
drlaw_agent/utils/: __init__.py  utils.py
drlaw_agent_a/: __main__.py
drlaw_agent_a/agents/: answer.py  executor.py  master.py  publisher.py  reviewer.py  toolselect.py
drlaw_agent_a/apis/: data_query_api.py
drlaw_agent_a/services/: __init__.py  base.py  company_info_service.py  company_register_service.py  law_service.py  sub_company_info_service.py
drlaw_agent_a/utils/: __init__.py  utils.py
(+12 files in other folders)
